--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,13 +28,11 @@ nav .container {
 .main-grid {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 60px calc(100% - 60px - 60px) 60px;
+    grid-template-rows: 60px auto 90px;
     grid-template-areas: 
     "header"
     "body"
     "footer";
-    min-height: 100vh;
-    max-height: 100vh;
     overflow: hidden;
 }
 
@@ -44,7 +42,6 @@ nav .container {
   
   .main-grid .body {
     grid-area: body;
-    overflow-y: scroll;
   }
   
   .main-grid .body .container {
@@ -82,6 +79,7 @@ nav .container {
     color: white;
     font-size: 12px;
     background-color: #9c1926;
+    margin-top: 30px;
 }
 
 .main-grid footer a {
@@ -108,7 +106,7 @@ nav .container {
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
     nav .container {
         width: 1290px;
     }
